Change to ows, ows-build

--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "inherits": "=2.0.1"
   },
   "devDependencies": {
-    "btccore-build": "git://github.com/owstack/btccore-build.git",
     "brfs": "^1.2.0",
     "chai": "^2.3.0",
     "gulp": "^3.8.10",
     "nodejs-externs": "^0.10.0",
+    "ows-build": "git://github.com/owstack/ows-build.git",
     "request": "^2.48.0",
     "vinyl-transform": "^1.0.0"
   }
